A working stop-gap measure for #14. Add some sexiness soon.

--- a/public/index.less
+++ b/public/index.less
@@ -15,6 +15,7 @@ html, body {
 }
 
 body {
+  background: black;
   display: table;
   width: 100%;
 
